<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Proficiency</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_view_">View_Activity</string>
    <string name="submit">Submit</string>
    <string name="verifyInfo">Verify Information</string>\
    <string name="editInfo">Edit Information</string>
    <string name="enterInfo">Enter Information</string>
    <string name="firstName">First Name</string>   
    <string name="lastName">Last Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="age">Age</string>
    <string name="edit">edit</string>
    <string name="second_page">Page 2</string>
    <string name="next">Next</string>
    <string name="Info">Information</string>
    <string name="Fetch">Fetch Last Entry</string>
    <string name="delete">Delete</string>
</resources>
