<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="1px">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/verifyInfo"
        android:id="@+id/textView2"
        android:layout_marginTop="45dp"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/firstName"
        android:id="@+id/fNameView"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/lastName"
        android:id="@+id/lNameView"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/email"
        android:id="@+id/emailView"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/phone"
        android:id="@+id/phoneView"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/age"
        android:id="@+id/ageView"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:id="@+id/button2"
        android:layout_marginTop="34dp"
        android:background="@color/background_material_dark"
        android:textColor="@color/background_material_light"
        android:onClick="submit"
        android:padding="15px"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="139dp"
        android:layout_height="wrap_content"
        android:text="@string/edit"
        android:id="@+id/button3"
        android:onClick="goBack"
        android:padding="15dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="25dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp" />

</LinearLayout>