<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="1px"
    android:weightSum="1"
    android:background="#ff9c9891">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/verifyInfo"
        android:id="@+id/textView2"
        android:layout_marginTop="45dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.08"
        android:gravity="center"
        android:background="#ff18ff7a" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/firstName"
        android:id="@+id/fNameTextView"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.05"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/lastName"
        android:id="@+id/lNameTextView"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.04" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/email"
        android:id="@+id/emailTextView"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.04" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/phone"
        android:id="@+id/phoneTextView"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.05" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/age"
        android:id="@+id/ageTextView"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.05" />

    <Button
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:id="@+id/submit"
        android:layout_marginTop="34dp"
        android:background="@color/bright_foreground_inverse_material_dark"
        android:textColor="@color/background_material_light"
        android:onClick="submit"
        android:padding="15dp"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:text="@string/edit"
        android:id="@+id/edit_pg2"
        android:onClick="goToEditPage"
        android:padding="15dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="25dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:background="#ff0500ff"
        android:textColor="#ffffde00" />

</LinearLayout>