<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    tools:context=".FirstPage"
    android:background="#ff9c9891">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/editInfo"
        android:id="@+id/textView"
        android:layout_marginTop="45dp"
        android:layout_weight="0.07"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:background="#ff18ff7a" />

    <EditText
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/firstName"
        android:id="@+id/fName"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:gravity="center"
        android:clickable="true"/>

    <EditText
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/lastName"
        android:id="@+id/lName"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:gravity="center" />

    <EditText
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:id="@+id/email"
        android:text="@string/email"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:gravity="center" />

    <EditText
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:id="@+id/phone"
        android:text="@string/phone"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.03"
        android:textAlignment="center"
        android:gravity="center" />

    <EditText
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:id="@+id/age"
        android:text="@string/age"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.02"
        android:textAlignment="center"
        android:gravity="center" />

    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:id="@+id/next_pg1"
        android:onClick="next"
        android:layout_marginTop="30dp"
        android:background="@color/bright_foreground_inverse_material_dark"
        android:textColor="#fff895ff"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.01" />

</LinearLayout>
