<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:background="#ff9c9891">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Info"
        android:id="@+id/textView2"
        android:layout_marginTop="45dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.06"
        android:gravity="center"
        android:background="#ff18ff7a" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/firstName"
        android:id="@+id/fNameView"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.05"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/lastName"
        android:id="@+id/lNameView"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.06" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/email"
        android:id="@+id/emailView"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.05" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/phone"
        android:id="@+id/phoneView"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.05" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/age"
        android:id="@+id/ageView"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.04" />

    <Button
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:text="@string/edit"
        android:id="@+id/edit_pg3"
        android:onClick="goToEditPage"
        android:padding="15dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="34dp"
        android:layout_marginRight="0dp"
        android:background="#ff0500ff"
        android:textColor="#ffffde00"/>

    <Button
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:text="@string/Fetch"
        android:id="@+id/Fetch"
        android:onClick="FetchLastData"
        android:padding="15dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="25dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:background="@color/bright_foreground_inverse_material_dark"
        android:textColor="@color/background_material_light" />

    <Button
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:id="@+id/button"
        android:onClick="Delete"
        android:padding="15dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="25dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:background="@color/bright_foreground_inverse_material_dark"
        android:textColor="@color/background_material_light"
        android:layout_weight="0.06" />

</LinearLayout>