<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".FirstPage">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/submitInfo"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/firstName"
        android:ems="10"
        android:id="@+id/fName"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="37dp"
        android:selectAllOnFocus="false"
        android:singleLine="false" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/lastName"
        android:ems="10"
        android:id="@+id/lName"
        android:layout_below="@+id/fName"
        android:layout_centerHorizontal="true"
        android:selectAllOnFocus="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/email"
        android:layout_below="@+id/lName"
        android:layout_centerHorizontal="true"
        android:text="@string/email"
        android:selectAllOnFocus="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/phone"
        android:layout_below="@+id/email"
        android:layout_centerHorizontal="true"
        android:text="@string/phone"
        android:selectAllOnFocus="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/age"
        android:layout_below="@+id/phone"
        android:layout_centerHorizontal="true"
        android:text="@string/age"
        android:selectAllOnFocus="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:id="@+id/button"
        android:onClick="next"
        android:layout_marginTop="40dp"
        android:background="@color/background_material_dark"
        android:textColor="@color/background_material_light"
        android:layout_below="@+id/age"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
